fixed alignments and css for admin movie list

--- a/BookMyMovieASP_MVC6/wwwroot/css/site.css
+++ b/BookMyMovieASP_MVC6/wwwroot/css/site.css
@@ -29,17 +29,7 @@ body {
 
 /*Admin */
 
-/*Movie List*/
-.amovielist-row:hover {
-    /*cursor: pointer;*/
-    background-color: #e72929;
-    color: white;
-    font-weight: 100;
-    text-decoration: none;
-    opacity: 0.9;
-    transition: 0.3s;
-    transform: scale(1.01);
-}
+
 
 /*Add Movie*/
 .am-form-row {
